<resources>
    <string name="app_name">PatientHistory</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="height">Height</string>
    <string name="cm"> cm</string>
    <string name="city">City</string>
    <string name="job">Job</string>
    <string name="finish_sign_up">Finish Sign Up</string>
    <string name="i_have_read_and_agree_to_the_terms_and_conditions">I have read and agree to the Terms and Conditions.</string>
    <string name="pick_profile_picture">Pick Profile picture</string>
    <string name="profile_picture">Profile Picture</string>


    <!-- for http requests-->
    <string name="localhost">http://192.168.1.12:3000/</string>
    <string name="patients">Patients</string>
    <string name="clinic">Clinic</string>
    <string name="posts">Posts</string>
    <string name="chats">Chats</string>
    <string name="data">Data</string>
    <string name="search">Search</string>
    <string name="bookings">Bookings</string>
    <string name="find">Find</string>
    <string name="booking">Booking</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="assistant">Assistant</string>
    <string name="sessions">Sessions</string>
    <string name="medicine_channel">MedicineChannel</string>
    <string name="chat_channel">Chat Channel</string>
    <string name="family_diseases">Family Diseases</string>
    <string name="allergies">Allergies</string>
    <string name="dietary_information">Dietary Information</string>
    <string name="remedies">Remedies</string>
    <string name="social_habit">Social Habit</string>
    <string name="physical_exam">Physical Exam</string>
    <string name="surgeries">Surgeries</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_blood_type">Enter Blood Type</string>
    <string name="enter_social_status">Enter Social Status</string>
    <string name="enter_number_of_children">Enter Number of Children</string>
    <string name="done">Done</string>
    <string name="disease_name">Disease Name</string>
    <string name="relative">Relative</string>
    <string name="restrictions">Restrictions</string>
    <string name="supplements">Supplements</string>
    <string name="enter_allergies">Enter Allergies</string>
    <string name="remedy_name">Remedy Name</string>
    <string name="start_date">Start Date</string>
    <string name="dose">Dose in mg</string>
    <string name="outcome">Outcome</string>
    <string name="tobacco">Tobacco</string>
    <string name="alcohol">Alcohol</string>
    <string name="illicit_drugs">Illicit Drugs</string>
    <string name="please_enter_true_or_false">Please Enter true or false.</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="view_all_data">View All Data</string>
    <string name="national_id">National Id</string>
    <string name="enter_doctor_username">Enter Doctor Username</string>
    <string name="give_permission">Give Permission</string>
    <string name="attempting_log_in">Attempting Log in</string>
    <string name="disease_id">Disease ID</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="add_disease">Add Disease</string>
    <string name="treatment_for">Treatment For</string>
    <string name="times">Times</string>
    <string name="interval">Interval</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="add_session">Add Session</string>
    <string name="view_data">View Data</string>
    <string name="add_data">Add Data</string>
    <string name="add_session_details">Add Session Details:</string>
    <string name="details">Details...</string>
    <string name="details_two">Details</string>
    <string name="location">Location</string>
    <string name="add_account">Add Account</string>
    <string name="remove_account">Remove Account</string>
    <string name="enter_clinic_username">Enter Clinic Username:</string>
    <string name="enter_clinic_password">Enter Clinic Password</string>
    <string name="comment">Comment...</string>
    <string name="add_post">Add Post</string>
    <string name="enter_post_title">Enter Post Title</string>
    <string name="enter_post_details">Enter Post Details</string>
</resources>
