<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_patient_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/data" />

        <Button
            android:id="@+id/btn_patient_family_diseases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/family_diseases" />

        <Button
            android:id="@+id/btn_patient_allergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/allergies" />

        <Button
            android:id="@+id/btn_patient_dietary_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/dietary_information" />

        <Button
            android:id="@+id/btn_patient_remedies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/remedies" />

        <Button
            android:id="@+id/btn_patient_social_habit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/social_habit" />

        <Button
            android:id="@+id/btn_patient_physical_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/physical_exam" />

        <Button
            android:id="@+id/btn_patient_surgeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/surgeries" />

        <Button
            android:id="@+id/btn_patient_view_all_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/view_all_data" />

    </LinearLayout>

</ScrollView>