<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".fragments.ViewAllPatientDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_patient_data_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/data"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_family_diseases_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/family_diseases"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_allergies_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/allergies"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_dietary_information_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/dietary_information"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_remedies_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/remedies"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_social_habit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/social_habit"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_physical_exam_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/physical_exam"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_patient_surgeries_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_shape"
            android:padding="10dp"
            android:text="@string/surgeries"
            android:textAlignment="center" />

    </LinearLayout>

</ScrollView>