<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".fragments.AddPatientMedicineOrDiseaseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_disease_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_disease_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_add_disease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape"
            android:text="@string/add_disease" />

        <EditText
            android:id="@+id/et_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_medicine_treatment_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/treatment_for"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_medicine_times"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/times"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_medicine_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/interval"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_medicine_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_shape"
            android:hint="@string/dose"
            android:inputType="number"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_add_medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape"
            android:text="@string/add_medicine" />

    </LinearLayout>

</ScrollView>