<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".fragments.AddSocialHabitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_true_or_false"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/et_patient_social_habit_tobacco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/tobacco"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_patient_social_habit_alcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/alcohol"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_patient_social_habit_illicit_drugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/illicit_drugs"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_patient_social_habit_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:padding="10dp"
        android:text="@string/done" />


</RelativeLayout>