<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".fragments.AddRemediesFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_patient_remedies_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/remedy_name"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_patient_remedies_start_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/start_date"
            android:inputType="date"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_patient_remedies_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/dose"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_patient_remedies_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/outcome"
            android:inputType="textMultiLine"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_patient_remedies_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:padding="10dp"
        android:text="@string/done" />

</RelativeLayout>