<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".register_user.PickImageAndConfirmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_shape"
            android:padding="5dp"
            android:text="@string/pick_profile_picture" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="40dp"
            android:contentDescription="@string/profile_picture"
            android:scaleType="fitXY" />
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:buttonTint="#ffffff"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:text="@string/i_have_read_and_agree_to_the_terms_and_conditions"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/btn_finish_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:padding="20dp"
        android:text="@string/finish_sign_up" />

</RelativeLayout>