<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    android:layout_margin="10dp"
    tools:context=".fragments.AddDataFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/et_patient_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_address"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/et_patient_blood_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_blood_type"
            android:inputType="textMultiLine"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/et_patient_social_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_social_status"
            android:inputType="text"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/et_patient_number_of_children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_number_of_children"
            android:inputType="number"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_patient_data_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:background="@drawable/button_shape"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>