<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".SignInActivity">

    <EditText
        android:id="@+id/et_username_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_password_sign_in"
        android:layout_margin="15dp"
        android:background="@drawable/button_shape"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp" />

    <EditText
        android:id="@+id/et_password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="15dp"
        android:background="@drawable/button_shape"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/tv_log_in_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/log_in"
        android:textColor="@color/grey"
        android:textSize="25sp" />

</RelativeLayout>