<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueDark"
    tools:context=".fragments.AddPhysicalExamFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    <EditText
        android:id="@+id/et_patient_blood_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/blood_pressure"
        android:inputType="text"
        android:padding="10dp" />

        <EditText
            android:id="@+id/et_patient_heart_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/heart_rate"
            android:inputType="text"
            android:padding="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_patient_physical_exam_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:padding="10dp"
        android:text="@string/done" />

</RelativeLayout>